--- a/charactorpage/charah.css
+++ b/charactorpage/charah.css
@@ -72,9 +72,18 @@ h3{
     text-align: center;
     padding-bottom: 20px;
     margin-top: 0px;
-    font-size: 1.2rem;
+    font-size: 1rem;
+}
+.lostfamilia, .heinzfamilia{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2%;
 }
 
+
+
+
+/*------------------footer------------------------*/
 footer{
     display: grid;
     grid-template-columns: 1fr 1fr;
