--- a/charactorpage/charah.css
+++ b/charactorpage/charah.css
@@ -15,9 +15,10 @@ header, footer{
     
 }
 h1{
-    font-size: 2.5em;
+    font-size: 2em;
     color: #AC4B4B;
     text-shadow: 3px 3px 2px white;
+    font-family: 'Rock Salt', cursive;
 }
 /*--------------------nav-----------------------------*/
 nav button{
@@ -73,6 +74,7 @@ h3{
     padding-bottom: 20px;
     margin-top: 0px;
     font-size: 1rem;
+    font-family: 'Tinos', serif;
 }
 .lostfamilia, .heinzfamilia{
     display: grid;
